[project]
name = "line-chat"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "raknatee", email = "raknatee@raknatee.dev"},
]
dependencies = [
    "langchain==0.1.20",
    "chromadb>=0.5.5",
    "pysqlite3>=0.5.3",
    "openai>=1.37.0",
    "langchain-postgres>=0.0.9",
    "langchain-openai>=0.1.7",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "ipykernel>=6.29.5",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
